--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --background: #ffffff;
@@ -23,4 +27,99 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer components {
+  .bannerIcon {
+    width: 4rem; /* 16px equivalent in Tailwind */
+    height: 4rem; /* 16px equivalent in Tailwind */
+    background-color: rgba(0, 0, 0, 0.25); /* bg-black bg-opacity-25 */
+    color: #e5e5e5; /* text-gray-200 */
+    font-size: 1.25rem; /* text-xl */
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.375rem; /* rounded-md */
+    box-shadow: 10px 10px 19px rgba(28, 30, 34, 1),
+      -10px -10px 19px rgba(38, 42, 46, 1); /* shadow-shadowOne */
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  .bannerIcon:hover {
+    background-color: rgba(0, 0, 0, 0.4); /* hover:bg-opacity-40 */
+    transform: translateY(-0.25rem); /* hover:-translate-y-1 */
+    color: #ff014f; /* hover:text-designColor */
+  }
+  .resumeLi {
+    width: 100%; /* w-full */
+    height: 5rem; /* h-20 */
+    background-color: rgba(0, 0, 0, 0.25); /* bg-black bg-opacity-25 */
+    color: #d1d5db; /* text-gray-300 */
+    font-size: 1.25rem; /* text-xl */
+    display: flex; /* flex */
+    justify-content: center; /* justify-center */
+    cursor: pointer; /* cursor-pointer */
+    transition: background-color 0.3s ease; /* duration-300 */
+    align-items: center; /* items-center */
+    border: 1px solid; /* border-[1px] */
+    border-radius: 0; /* rounded-none */
+  }
+  .resumeLi:hover {
+    background-color: rgba(0, 0, 0, 0.4); /* hover:bg-opacity-40 */
+  }
+
+  .bgOpacity {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .contactInput {
+    width: 100%; /* w-full */
+    height: 3rem; /* h-12 */
+    border-radius: 0.5rem; /* rounded-lg */
+    border-bottom: 1px solid #4b5563; /* border-b-[1px] border-b-gray-600 */
+    background-color: #191b1e; /* bg-[#191b1e] */
+    color: #c4cfde; /* text-lightText */
+    padding-left: 1rem; /* px-4 */
+    padding-right: 1rem; /* px-4 */
+    outline: none; /* outline-none */
+    transition: all 0.3s ease; /* duration-300 */
+  }
+  .contactInput:focus-visible {
+    outline: 2px solid #ff014f; /* focus-visible:outline-designColor */
+    border-bottom: transparent; /* focus-visible:border-b-transparent */
+  }
+
+  .contactInput:active {
+    outline: none; /* active:outline-none */
+  }
+
+  .contactTextArea {
+    width: 100%; /* w-full */
+    border-radius: 0.5rem; /* rounded-lg */
+    border-bottom: 1px solid #4b5563; /* border-b-[1px] border-b-gray-600 */
+    background-color: #191b1e; /* bg-[#191b1e] */
+    color: #c4cfde; /* text-lightText */
+    padding-left: 1rem; /* px-4 */
+    padding-right: 1rem; /* px-4 */
+    padding-top: 0.5rem; /* py-2 */
+    padding-bottom: 0.5rem; /* py-2 */
+    outline: none; /* outline-none */
+    resize: none; /* resize-none */
+    transition: all 0.3s ease; /* duration-300 */
+  }
+
+  .contactTextArea:focus-visible {
+    outline: 2px solid #ff014f; /* focus-visible:outline-designColor */
+    border-bottom: transparent; /* focus-visible:border-b-transparent */
+  }
+
+  .contactTextArea:active {
+    outline: none; /* active:outline-none */
+  }
+}
+
+.active {
+  color: white;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
