--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,69 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Theme Customizations */
-
-/* Custom Screen Sizes */
-@media (max-width: 320px) {
-  /* xs: 320px */
-}
-
-@media (max-width: 375px) {
-  /* sm: 375px */
-}
-
-@media (max-width: 500px) {
-  /* sml: 500px */
-}
-
-@media (max-width: 667px) {
-  /* md: 667px */
-}
-
-@media (max-width: 768px) {
-  /* mdl: 768px */
-}
-
-@media (max-width: 960px) {
-  /* lg: 960px */
-}
-
-@media (max-width: 1024px) {
-  /* lgl: 1024px */
-}
-
-@media (max-width: 1280px) {
-  /* xl: 1280px */
-}
-
 /* Custom Fonts */
 body {
-  font-family: "Poppins", sans-serif; /* bodyFont */
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 /* Title Font */
@@ -76,123 +18,142 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", sans-serif; /* titleFont */
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Custom Colors */
 body {
-  background-color: #212428; /* bodyColor */
-  color: #c4cfde; /* lightText */
+  background-color: #212428;
+  color: #c4cfde;
 }
 
-.box-bg {
-  background: linear-gradient(145deg, #1e2024, #23272b); /* boxBg */
+.from-bodyColor {
+  background: linear-gradient(145deg, #1e2024, #23272b);
 }
 
-.text-design-color {
-  color: #ff014f; /* designColor */
-}
-
-/* Custom Box Shadow */
-.shadow-shadowOne {
-  box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e; /* shadowOne */
+.border-designColor {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 1 79 / var(--tw-border-opacity));
 }
 
 /* Example for applying custom styles globally */
 .custom-element {
-  background-color: #212428; /* bodyColor */
-  color: #c4cfde; /* lightText */
-  font-family: "Poppins", sans-serif; /* bodyFont */
-  box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e; /* shadowOne */
+  background-color: #212428;
+  color: #c4cfde;
+  font-family: "Poppins", sans-serif;
+  box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
 }
 
 /*   End of Code*/
 
 @layer components {
   .bannerIcon {
-    width: 4rem; /* 16px equivalent in Tailwind */
-    height: 4rem; /* 16px equivalent in Tailwind */
-    background-color: rgba(0, 0, 0, 0.25); /* bg-black bg-opacity-25 */
-    color: #e5e5e5; /* text-gray-200 */
-    font-size: 1.25rem; /* text-xl */
+    width: 4rem;
+    height: 4rem;
+    background-color: rgba(0, 0, 0, 0.25);
+    color: #e5e5e5;
+    font-size: 1.25rem;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0.375rem; /* rounded-md */
+    border-radius: 0.375rem;
     box-shadow: 10px 10px 19px rgba(28, 30, 34, 1),
-      -10px -10px 19px rgba(38, 42, 46, 1); /* shadow-shadowOne */
+      -10px -10px 19px rgba(38, 42, 46, 1);
     transition: all 0.3s ease;
     cursor: pointer;
   }
   .bannerIcon:hover {
-    background-color: rgba(0, 0, 0, 0.4); /* hover:bg-opacity-40 */
-    transform: translateY(-0.25rem); /* hover:-translate-y-1 */
-    color: #ff014f; /* hover:text-designColor */
+    background-color: rgba(0, 0, 0, 0.4);
+    transform: translateY(-0.25rem);
+    color: #ff014f;
   }
   .resumeLi {
-    width: 100%; /* w-full */
-    height: 5rem; /* h-20 */
-    background-color: rgba(0, 0, 0, 0.25); /* bg-black bg-opacity-25 */
-    color: #d1d5db; /* text-gray-300 */
-    font-size: 1.25rem; /* text-xl */
-    display: flex; /* flex */
-    justify-content: center; /* justify-center */
-    cursor: pointer; /* cursor-pointer */
-    transition: background-color 0.3s ease; /* duration-300 */
-    align-items: center; /* items-center */
-    border: 1px solid; /* border-[1px] */
-    border-radius: 0; /* rounded-none */
+    width: 100%;
+    height: 5rem;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+    color: #d1d5db;
+    font-size: 1.25rem;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    transition: 0.3s ease;
+    align-items: center;
+    border: 1px solid;
+    --tw-bg-opacity: 0.25;
+    --tw-text-opacity: 1;
+    color: rgb(209 213 219 / var(--tw-text-opacity));
+    transition-duration: 300ms;
+    line-height: 1.75rem;
+    border-radius: 0;
+    font-size: 1.25rem;
   }
   .resumeLi:hover {
-    background-color: rgba(0, 0, 0, 0.4); /* hover:bg-opacity-40 */
+    --tw-bg-opacity: 0.4;
+  }
+  .border-designColor {
+    --tw-border-opacity: 1;
+    border-color: rgb(255 1 79 / var(--tw-border-opacity));
   }
 
   .bgOpacity {
     background-color: rgba(0, 0, 0, 0.4);
   }
+
   .contactInput {
-    width: 100%; /* w-full */
-    height: 3rem; /* h-12 */
-    border-radius: 0.5rem; /* rounded-lg */
-    border-bottom: 1px solid #4b5563; /* border-b-[1px] border-b-gray-600 */
-    background-color: #191b1e; /* bg-[#191b1e] */
-    color: #c4cfde; /* text-lightText */
-    padding-left: 1rem; /* px-4 */
-    padding-right: 1rem; /* px-4 */
-    outline: none; /* outline-none */
-    transition: all 0.3s ease; /* duration-300 */
+    width: 100%;
+    height: 3rem;
+    border-radius: 0.5rem;
+    border-bottom: 1px solid #4b5563;
+    background-color: #191b1e;
+    color: #c4cfde;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    outline: none;
+    transition: all 0.3s ease;
   }
   .contactInput:focus-visible {
-    outline: 2px solid #ff014f; /* focus-visible:outline-designColor */
-    border-bottom: transparent; /* focus-visible:border-b-transparent */
+    outline: 2px solid #ff014f;
+    border-bottom: transparent;
   }
 
   .contactInput:active {
-    outline: none; /* active:outline-none */
+    outline: none;
   }
 
   .contactTextArea {
-    width: 100%; /* w-full */
-    border-radius: 0.5rem; /* rounded-lg */
-    border-bottom: 1px solid #4b5563; /* border-b-[1px] border-b-gray-600 */
-    background-color: #191b1e; /* bg-[#191b1e] */
-    color: #c4cfde; /* text-lightText */
-    padding-left: 1rem; /* px-4 */
-    padding-right: 1rem; /* px-4 */
-    padding-top: 0.5rem; /* py-2 */
-    padding-bottom: 0.5rem; /* py-2 */
-    outline: none; /* outline-none */
-    resize: none; /* resize-none */
-    transition: all 0.3s ease; /* duration-300 */
+    width: 100%;
+    border-radius: 0.5rem;
+    border-bottom: 1px solid #4b5563;
+    background-color: #191b1e;
+    color: #c4cfde;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    outline: none;
+    resize: none;
+    transition: all 0.3s ease;
   }
 
   .contactTextArea:focus-visible {
-    outline: 2px solid #ff014f; /* focus-visible:outline-designColor */
-    border-bottom: transparent; /* focus-visible:border-b-transparent */
+    outline: 2px solid #ff014f;
+    border-bottom: transparent;
   }
 
   .contactTextArea:active {
-    outline: none; /* active:outline-none */
+    outline: none;
+  }
+
+  .shadow-shadowOne {
+    --tw-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
+    --tw-shadow-colored: 10px 10px 19px var(--tw-shadow-color),
+      -10px -10px 19px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .text-designColor {
+    color: #ff014f;
   }
 }
 
