--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Custom Fonts */
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
@@ -154,6 +153,9 @@ body {
 
   .text-designColor {
     color: #ff014f;
+  }
+  .spanColor {
+    background-color: #ff014f;
   }
 }
 
