--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,19 @@ body {
     transition: all 0.3s ease;
     cursor: pointer;
   }
+
+  .BannerIcon {
+    width: 14.1rem;
+    height: 4rem;
+    color: #e5e5e5;
+    font-size: 1.25rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.375rem;
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
   .bannerIcon:hover {
     background-color: rgba(0, 0, 0, 0.4);
     transform: translateY(-0.25rem);
